# s3tethys

./: .gitignore  .readthedocs.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
conda/: meta.yaml
s3tethys/: __init__.py  main.py  utils.py
s3tethys/tests/: utest_s3tethys.py
