[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3tethys"
version = '0.1.0'
description = "Python S3 tools for tethys using smart_open"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    { name = "Mike Kittridge", email = "mullenkamp1@gmail.com" },
]
keywords = [
    "s3",
    "tethys",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "boto3",
    "pandas",
    "pydantic",
    "requests",
    "smart_open",
    "zstandard",
]

[project.urls]
Homepage = "https://github.com/tethys-ts/s3tethys"

[tool.hatch.build.targets.sdist]
include = [
    "/s3tethys",
]

